--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-spring.datasource.url=jdbc:sqlserver://MELINDA\\SQLEXPRESS:1433;databaseName=ticket_management_system;encrypt=false;
-spring.datasource.username=user
-spring.datasource.password=user
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ticket_management_system;encrypt=false;trustServerCertificate=true;integratedSecurity=true
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format-sql=true
